add banner image

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     
         <section class="banner">
             <div class="banner-image">
-                <img src="images/istockphoto-1347847371-612x612-removebg-preview(2).png" alt="" />
+                <img src="images/Luxury-Experience.png" alt="" />
             </div>
             <div class="banner-content">
                 <h2>زیبایی واقعی خود را نمایان کن</h2>
