--- a/index.html
+++ b/index.html
@@ -7,19 +7,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Playwrite+PL:wght@100..400&family=Playwrite+VN+Guides&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazir-font@v30.1.0/dist/font-face.css" rel="stylesheet" type="text/css" />
-    <link href="https://cdn.fontcdn.ir/Font/Persian/Shabnam/Shabnam.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js" integrity="sha512-b+nQTCdtTBIRIbraqNEwsjB6UvL3UEMkXnhzd8awtCYh0Kcsjl9uEgwVFVbhoj3uu1DO1ZMacNvLoyJJiNfcvg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
 </head>
 <body>
 
     <div class="container">
         <header id="hero">
             <div class="hero-content">
-                <h2 class="hero-content-slogan">جایی که زیبایی با شکوه تلاقی می‌کند</h2>
-                <p class="hero-content-desc">با محصولات <strong style="color: #D4AF37;">ولوریا</strong>، بدرخشید...</p>
+                <p class="hero-content-slogan">جایی که زیبایی با شکوه تلاقی می‌کند</p>
+                <h2 class="hero-content-desc">با محصولات <strong style="color: #D4AF37;">ولوریا</strong>، بدرخشید...</h2>
                 <a href="#"><button class="cta">مشاهده محصولات</button></a>
             </div>
             <div class="hero-brand">
@@ -50,7 +49,7 @@
     
         <section class="banner">
             <div class="banner-image">
-                <img src="images/Luxury-Experience.png" alt="" />
+                <img src="images/Luxury Experience.png" alt="" />
             </div>
             <div class="banner-content">
                 <h2>زیبایی واقعی خود را نمایان کن</h2>
