--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     
         <section class="banner">
             <div class="banner-image">
-                <img src="images/Luxury Experience.png" alt="" />
+                <img src="images/Luxury-Experience.png" alt="" />
             </div>
             <div class="banner-content">
                 <h2>زیبایی واقعی خود را نمایان کن</h2>
