--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             </div>
     
             <div class="social">
-                <a class="social-link" href="#"><i class="fa-brands fa-facebook fa-fade social-icon"></i></a>
-                <a class="social-link" href="#"><i class="fa-brands fa-telegram fa-fade social-icon"></i></a>
+                <a class="social-link" href="#"><i class="fa-brands fa-square-facebook fa-fade social-icon"></i></a>
+                <a class="social-link" href="#"><i class="fa-brands fa-linkedin fa-fade social-icon"></i></a>
                 <a class="social-link" href="#"><i class="fa-brands fa-square-twitter fa-fade social-icon"></i></a>
             </div>
         </footer>
