Add developer in footer and some corrections

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <footer>
             <div class="copyright">
                 <img src="images/footer.png" alt="">
-                <p>تمامی حقوق محفوظ است - ولوریا 2025 ©</p>
+                <p>تمامی حقوق محفوظ است - ولوریا 2025 ©<br />طراحی و توسعه توسط همایون قدیری</p>
             </div>
     
             <div class="social">
